# coffeeShop

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  utils.sh
src/: CMakeLists.txt  OrderManager.cpp  OrderManager.h  main.cpp  menu.csv
src/menu_parsers/: CSVParser.cpp  CSVParser.h  IMenuParser.h  MenuParserFactory.h
src/rules/: CannotHaveBoth.h  IRuleExtras.h  RuleFactory.h  RuleManager.cpp  RuleManager.h
src/storage/: DiskStorage.cpp  DiskStorage.h  IOrderStorage.h  OrderStorageFactory.h
src/types/: Beverage.cpp  Beverage.h  Order.cpp  Order.h
src/ui/: ShellUI.cpp  ShellUI.h  UIiface.h
src/utils/: StringUtils.cpp  StringUtils.h
test/: CMakeLists.txt  main_uts.cpp  tests_CSVParser.cpp  tests_CSVParser.h  tests_OrderManager.cpp  tests_OrderManager.h
test/menu_parsers/: tests_CSVParser.cpp  tests_CSVParser.h
test/rules/: tests_CannotHaveBoth.cpp  tests_CannotHaveBoth.h
test/utils/: tests_StringUtils.cpp  tests_StringUtils.h
